...
                android:textColor="@android:color/white"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/history_title_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Reason For Mood"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
...
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toEndOf="@+id/history_social_situation_text"
                app:layout_constraintTop_toBottomOf="@id/history_title_text"
                android:contentDescription="Visibility Icon" />

            <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/history_social_situation_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.986"
                app:layout_constraintStart_toStartOf="parent"
...
